# CRender

./: #linux_install.sh#  .#linux_install.sh  .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CRender  LICENSE  LICENSE.md  Makefile  README.md  clear.sh  cmake_install.cmake  compile.sh  imgui.ini  linux_install.sh  null.d  readme.md
assets/app/shaders/: blur.comp  compute.glsl  draft_mode.frag  draft_mode.vert  draft_mode_background.comp  post_process.comp  scene_zoom.comp
assets/app/shaders/pathtrace/: entry.comp
assets/app/shaders/pathtrace/kernel/: extend.comp  generate.comp  shade.comp
assets/models/cornell box/: cornell-box.mtl
assets/models/e/: monitor.mtl
assets/shaders/: compute.glsl  shader.frag  shader.vert
data/: errors.json
source/: CRender.hpp  Init.cpp  main.cpp  tmp.txt  types.hpp
source/compute/: compute_device.hpp  cpu_compute.cpp  cpu_compute.hpp
source/material/: brdf.cpp  brdf.hpp  material.hpp  sampleable.hpp
source/render/: cpu_renderer.cpp  cpu_renderer.h  sky.cpp  sky.hpp
source/scene/: configuration.hpp  ray.hpp  scene.hpp  sphere_scene.cpp  sphere_scene.hpp  triangular_scene.cpp  triangular_scene.hpp
source/ui/: display.cpp  display.hpp  input_devices.cpp  input_devices.hpp  input_handling.cpp  input_handling.hpp
source/ui/components/: asset_loader.cpp  asset_loader.hpp  component.hpp  console.cpp  console.hpp  export.cpp  export.hpp  post_processing.cpp  post_processing.hpp  preview.cpp  preview.hpp  render_target.cpp  render_target.h  settings.cpp  settings.hpp  skybox.cpp  skybox.hpp  stats.cpp  stats.hpp
source/util/: atomic_image.hpp  denoise.hpp  glad.c  gltf.hpp  image.hpp  logger.hpp  random.hpp  sampling.hpp
src/: main.cpp
src/asset/: texture.h
src/codecs/: video_reader.cpp  video_reader.h  video_writer.cpp  video_writer.h
src/glad/: glad.c  glad.h
src/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imnodes.cpp  imnodes.h  imstb_textedit.h  imstb_truetype.h
src/math/: bbox.h
src/objects/: bit.h  image.cpp  image.h  model.cpp  model.h  sky.h  thread_pool.cpp  thread_pool.h
src/render/: brdf.h  bvh_node.cpp  bvh_node.h  camera.cpp  camera.h  gpu_renderer.cpp  gpu_renderer.h  light.cpp  light.h  mesh.h  post_processor.cpp  post_processor.h  ray.cpp  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  timer.cpp  timer.h
src/render/draft/: draft_renderer.cpp  draft_renderer.h
src/render/entities/: components.h  entity_type.h  registry.cpp  registry.h
src/render/material/: material.cpp  material.h
src/render/post/: post_processor.cpp  post_processor.h
src/tracy/: TracyOpenGL.hpp
src/ui/: #display.cpp#  display.cpp  display.h  displayold  themes.h  ui.h  user_settings.h
src/ui/nodes/: node_editor.cpp  node_editor.h
src/util/: algorithm.h  asset_loader.cpp  asset_loader.h  colour.h  denoise.h  exception.h  logger.cpp  logger.h  model_loader.cpp  model_loader.h  numbers.h  opengl.h  random.h  sampling.h
src/world/: world.h
